# algan

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
algan/: __init__.py  scene.py  scene_tracker.py  texture_maps.py
algan/animation/: animatable.py  animation_contexts.py
algan/constants/: color.py  math.py  rate_funcs.py  spatial.py
algan/defaults/: batch_defaults.py  device_defaults.py  directory_defaults.py  render_defaults.py  style_defaults.py
algan/external_libraries/: readme.txt
algan/geometry/: bezier_geometry.py  geometry.py
algan/mobs/: bezier_circuit.py  group.py  image_mob.py  manim_mob.py  mob.py  numeric_display.py  plots.py  renderable.py  shapes_2d.py  shapes_3d.py  text.py  triangulated_bezier_circuit.py
algan/rendering/: camera.py  lights.py  post_processing.py
algan/settings/: render_settings.py
algan/utils/: algan_utils.py  animation_utils.py  file_utils.py  memory_utils.py  plotting_utils.py  python_utils.py  tensor_utils.py
docs/: .buildinfo  changelog.html  conduct.html  contributing.html  examples.html  genindex.html  index.html  installation.html  make_and_open_docs.py  objects.inv  plugins.html  py-modindex.html  reference.html  search.html  searchindex.js  tutorials_guides.html
docs/_modules/: index.html
docs/_sources/: changelog.rst.txt  index.rst.txt  installation.rst.txt  reference.rst.txt  tutorials_guides.rst.txt
docs/advanced_user_tutorials/: animating_out_of_order.html  batching_mobs.html  extending_algan.html  images_and_textures.html  index.html  lights_camera_action.html  shaders_and_materials.html  transparent_backgrounds.html
docs/contributing/: development.html
docs/developer_tutorials/: index.html  overview_internals.html
docs/faq/: general.html  index.html
docs/installation/: installation.html  macos.html  uv.html
docs/making_algan_faster/: change_batch_sizes.html  index.html  install_pytorch_scatter.html  use_pytorch_compile.html
docs/manim_user_quickstart/: index.html  manim_user_quickstart.html
docs/new_user_tutorials/: basic_animations.html  batching_mobs.html  controlling_animations.html  getting_started.html  images_and_textures.html  importing_from_manim.html  index.html  installation.html  nesting_mobs.html  output_and_config.html  shaders and materials.html  shaders_and_materials.html  textures.html  updaters.html
docs/reference/: algan.animation.animatable.Animatable.html  algan.animation.animatable.AnimatableData.html  algan.animation.animatable.ModificationHistory.html  algan.animation.animatable.TimeInterval.html  algan.animation.animatable.html  algan.animation.animation_contexts.AnimationContext.html  algan.animation.animation_contexts.AnimationManager.html  algan.animation.animation_contexts.ComposeRateFunc.html  algan.animation.animation_contexts.Lag.html  algan.animation.animation_contexts.NoExtra.html  algan.animation.animation_contexts.Off.html  algan.animation.animation_contexts.OnInit.html  algan.animation.animation_contexts.RateFuncWrapper.html  algan.animation.animation_contexts.Seq.html  algan.animation.animation_contexts.SlideShow.html  algan.animation.animation_contexts.Sync.html  algan.animation.animation_contexts.html  algan.mobs.bezier_circuit.BezierCircuitCubic.html  algan.mobs.bezier_circuit.BezierCurveCubic.html  algan.mobs.bezier_circuit.html  algan.mobs.group.Group.html  algan.mobs.group.html  algan.mobs.manim_mob.ManimMob.html  algan.mobs.manim_mob.html  algan.mobs.mob.Mob.html  algan.mobs.mob.html  algan.mobs.numeric_display.NumericDisplay.html  algan.mobs.numeric_display.html  algan.mobs.shapes_2d.Circle.html  algan.mobs.shapes_2d.Polygon.html  algan.mobs.shapes_2d.Quad.html  algan.mobs.shapes_2d.QuadTriangulated.html  algan.mobs.shapes_2d.Rectangle.html  algan.mobs.shapes_2d.RegularPolygon.html  algan.mobs.shapes_2d.Square.html  algan.mobs.shapes_2d.Triangle.html  algan.mobs.shapes_2d.TriangleTriangulated.html  algan.mobs.shapes_2d.TriangleVertices.html  algan.mobs.shapes_2d.html  algan.mobs.shapes_3d.Cylinder.html  (+33 more)
docs/reference_index/: animation.html  mobs.html  rendering.html  scenes.html  settings.html  utils.html
docs/source/: conf.py  (+4 more)
doctrees/: changelog.doctree  conduct.doctree  contributing.doctree  environment.pickle  examples.doctree  index.doctree  installation.doctree  plugins.doctree  reference.doctree  tutorials_guides.doctree
recipe/: meta.yaml
tests/: run_tests.py
(+421 files in other folders)
